k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: context-compression-svc
  namespace: default
  labels:
    app: context-compression
spec:
  type: NodePort
  selector:
    app: context-compression
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
      name: http
